# anssi-recommandations-cyber

./: .env.langfuse  .env.template  .gitignore  Dockerfile  LANGFUSE.md  README.md  config.py  docker-compose-langfuse-metabase.yml  docker-compose-langfuse.yml  docker-compose.yml  index.html  obtenir-cles-langfuse.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
.githooks/: pre-commit
.github/: renovate.json
.github/workflows/: checkov.yml  ci.yml  codeql-analysis.yml  deploiement.yml  renovate.yaml  securite-ci.yml
documentation/: interactions_albert.md
donnees/: faq_reponses_maitrisees.mapping.json
front/: vite.config.mts
front/src/: App.svelte  app.css
migrations/: 0001_initial_schema.sql  0002_cree_table_conversation.sql  0003_migre_les_interactions.sql
scripts/clever-cloud/: post-build-clever.sh
scripts/notebooks/: Analyse_erreurs_retrieval.ipynb  Differentes_interactions_avec_API_Albert.ipynb  Historique_messages.ipynb  Indexer_documents_pdfs.ipynb  Intersection_des_chunks.ipynb  README.md  jeopardy.ipynb  pyproject.toml
serveur/: index.ts  types.d.ts
src/: adaptateur_base_de_donnees.py  client_albert.py  config.py  configuration.py  gradio_app.py  main.py  mcp-local-authentifie.md  serveur.py  serveur_mcp.py  streamlit_app.py  ui_integration.py
src/adaptateurs/: __init__.py  adaptateur_base_de_donnees.py  adaptateur_base_de_donnees_memoire.py  adaptateur_base_de_donnees_postgres.py  adaptateur_executeur_de_requetes.py  chiffrement.py  connecteur.py  horloge.py  journal.py  migrateur.py  sentry.py
src/api/: api.py  api_avis.py  api_conversation.py  api_retour.py  conversation.py  recherche.py  route_document_source.py
src/clients/: albert.py
src/conversation/: conversation.py  question_utilisateur.py  retour_utilisatrice.py
src/infra/: mapping_reponses_maitrisees.py
src/managers/: manager_historique.py  manager_historique_concatenation.py
src/question/: question.py  reformulateur_de_question.py
src/schemas/: albert.py  api.py  client_albert.py  reponses.py  requetes.py  retour_utilisatrice.py  type_utilisateur.py  violations.py
src/services/: albert.py  client_albert.py  exceptions.py  fabrique_service_albert.py  reclasseur.py  service_albert.py
templates/: prompt_assistant_cyber.txt  prompt_reclassement.txt  prompt_reclassement_llm.txt  prompt_reformulation.txt
tests/: conftest.py  test_adaptateur_base_de_donnees.py  test_adaptateur_base_de_donnees_retour_utilisatrice.py  test_client_albert.py  test_configuration.py  test_manager_historique.py  test_migrateur.py  test_modeles_retour_utilisatrice.py  test_routes_fastapi.py  test_routes_ihm.py  test_routes_retour_utilisatrice.py  test_serveur_mcp.py
tests/adaptateurs/: test_adaptateur_chiffrement.py  test_adaptateur_sentry.py
tests/api/: conftest.py  test_avis_utilisateurice.py  test_conversation_ajoute_interaction.py  test_conversation_initie_conversation.py  (+8 more)
ui/: .env.template  Dockerfile  README.md  cgu.html  eslint.config.js  faq.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  politique-confidentialite.html  svelte.config.js  tsconfig.app.json  vite.config.ts  vitest.setup.ts
(+118 files in other folders)
