[project]
name = "RecommandationsCyber"
version = "0.1.0"
description = "Une interface permettant d'interroger [Albert](https://albert.etalab.gouv.fr), le modèle IA, chargé avec des guides de l'ANSSI."
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "httpx",
    "langfuse",
    "openai",
    "psycopg2-binary",
    "pytest",
    "requests",
    "typing",
    "uvicorn",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "types-psycopg2",
    "types-requests",
]

[tool.mypy]
files = ["src/**/*.py", "tests/**/*.py"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
target-version = "py313"