[project]
name = "RecommandationsCyber"
version = "0.1.0"
description = "Une interface permettant d'interroger [Albert](https://albert.etalab.gouv.fr), le modèle IA, chargé avec des guides de l'ANSSI."
requires-python = "==3.13.*"
dependencies = [
    "cryptography",
    "dpath",
    "fastapi",
    "fastapi-armor",
    "httpx",
    "openai",
    "psycopg2-binary",
    "pytest",
    "requests",
    "slowapi",
    "typing",
    "uvicorn",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "types-psycopg2",
    "types-requests",
    "pytest-dotenv",
]

[tool.mypy]
files = ["src/**/*.py", "tests/**/*.py"]
explicit_package_bases = true
mypy_path = ["src", "tests/mocks"]

[tool.pytest.ini_options]
pythonpath = [
    "src", "tests/mocks"
]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
target-version = "py313"