[project]
name = "env-notebook"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "deepeval>=3.5.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/albert_test"]


[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "itables",
    "jupyter",
    "nbstripout",
    "openai",
    "pandas",
    "pytest>=7.0.0",
    "rich",
    "ruff>=0.1.0",
    "tabulate",
    "openpyxl",
    "streamlit",
    "wget",
]
